# bedrock-workshop

./: .gitignore  README.md  pyproject.toml
src/: advanced-rag.py  basic-web.py  chat-web.py  example.py  pdf-web.py  pdf2text.py  rag-kb1.py
