[tool.poetry]
name = "bedrock-workshop"
version = "0.1.0"
description = ""
authors = ["atsushi.fujioka"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
boto3 = "^1.35.66"
streamlit = "^1.40.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
